// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/helpers/thumbnailer should call window.createImageBitmap, canvas.getContext, canvasContext.drawImage and canvas.toDataURL 1`] = `
Array [
  Array [
    Object {
      "height": 1024,
      "width": 1280,
    },
    128,
    0,
    1024,
    1024,
    0,
    0,
    150,
    150,
  ],
]
`;

exports[`src/helpers/thumbnailer should use fallbackThumbnailer if window.createImageBitmap does not exist 1`] = `
Array [
  Array [
    mockedImage {
      "height": 1024,
      "onerror": [Function],
      "onload": [Function],
      "src": undefined,
      "width": 1280,
    },
    128,
    0,
    1024,
    1024,
    0,
    0,
    150,
    150,
  ],
]
`;

exports[`src/helpers/thumbnailer should use fallbackThumbnailer if window.createImageBitmap rejects 1`] = `
Array [
  Array [
    mockedImage {
      "height": 1024,
      "onerror": [Function],
      "onload": [Function],
      "src": undefined,
      "width": 1280,
    },
    128,
    0,
    1024,
    1024,
    0,
    0,
    150,
    150,
  ],
]
`;
